--- a/Top_100_companies.ipynb
+++ b/Top_100_companies.ipynb
@@ -22,6 +22,16 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "![Treemap Visualization](https://github.com/mwang-cmn/Top_100_Companies_Africa/blob/main/revenue_africa.png?raw=1)\n"
+      ],
+      "metadata": {
+        "id": "PjNFE70lEuUP"
+      },
+      "id": "PjNFE70lEuUP"
+    },
+    {
+      "cell_type": "markdown",
       "id": "812ba9cb-269c-4557-b122-4a438e6a208d",
       "metadata": {
         "id": "812ba9cb-269c-4557-b122-4a438e6a208d"
@@ -35,7 +45,7 @@
         "- **BeautifulSoup and requests** - Web Scrapping\n",
         "- **Matplotlib, seaborn and plotly** - Data Visualizations\n",
         "\n",
-        "#### Problem Statement\n",
+        "#### **Problem Statement**\n",
         "\n",
         "There is a gap in understanding how revenues are distributed across Africa’s key industries and countries, which makes it harder for stakeholders to make well-informed decisions. With a few large companies dominating sectors like telecommunications, mining, and oil & gas, it’s crucial to grasp the economic impact of these industries to better guide investment, policy, and business strategies. This analysis of the top 100 companies by revenue, broken down by industry and country, aims to provide clearer insights into these market leaders, the economic contributions of different sectors, and emerging opportunities.\n",
         "\n",
@@ -57,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": null,
       "id": "cddaec18-2b3c-4dbf-a4c2-cd530da8f88c",
       "metadata": {
         "id": "cddaec18-2b3c-4dbf-a4c2-cd530da8f88c"
@@ -79,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": null,
       "id": "78310700-b18b-46b5-9a0a-567ac241fd11",
       "metadata": {
         "id": "78310700-b18b-46b5-9a0a-567ac241fd11"
@@ -93,7 +103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": null,
       "id": "f51dc357-b6c9-4da3-b359-02c51370b3c5",
       "metadata": {
         "id": "f51dc357-b6c9-4da3-b359-02c51370b3c5"
@@ -105,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": null,
       "id": "db3016f0-a709-4ef0-90ac-70ff8eb90f77",
       "metadata": {
         "scrolled": true,
@@ -118,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": null,
       "id": "eb584ab4-cf7b-45d4-908e-de3cddbfb8e6",
       "metadata": {
         "colab": {
@@ -151,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": null,
       "id": "9dd6f77e-2d14-432a-a775-0e3da13e1dbf",
       "metadata": {
         "colab": {
@@ -179,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": null,
       "id": "7a25e443-3401-46cf-8c59-441ccc5c435f",
       "metadata": {
         "colab": {
@@ -208,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "id": "4cabdbc9-cb7f-45ea-b5dd-87a41e90928b",
       "metadata": {
         "id": "4cabdbc9-cb7f-45ea-b5dd-87a41e90928b"
@@ -226,7 +236,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": null,
       "id": "a5290552-6084-4a42-a863-2a1c74d6454e",
       "metadata": {
         "colab": {
@@ -554,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": null,
       "id": "635cbc87-f082-4572-adb2-7b8ecc97bd87",
       "metadata": {
         "id": "635cbc87-f082-4572-adb2-7b8ecc97bd87"
@@ -579,7 +589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": null,
       "id": "872c61d7-49ec-49c3-86b7-881bfa86fc6c",
       "metadata": {
         "colab": {
@@ -617,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": null,
       "id": "2806aed7-03b3-4b30-a1a0-d04f0c43edd6",
       "metadata": {
         "colab": {
@@ -659,7 +669,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "id": "5a1a1e44-1648-40a6-ba0b-cd6e3259349d",
       "metadata": {
         "colab": {
@@ -974,7 +984,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 140,
+      "execution_count": null,
       "id": "10184b18-02a1-4961-8103-0769edc80d29",
       "metadata": {
         "colab": {
@@ -1054,7 +1064,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 141,
+      "execution_count": null,
       "id": "99513813-02ba-4b48-992b-86635af4ac63",
       "metadata": {
         "colab": {
@@ -1414,7 +1424,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": null,
       "id": "da435138-3432-45ab-add3-4b54eef36429",
       "metadata": {
         "colab": {
@@ -1716,7 +1726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": null,
       "id": "5fdb55a7-2924-4172-b583-0f42521aef8a",
       "metadata": {
         "colab": {
@@ -1757,7 +1767,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": null,
       "id": "00b46370-4009-4696-961a-e601ac4f0446",
       "metadata": {
         "colab": {
@@ -1796,7 +1806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": null,
       "id": "58ae9ea1-3aa9-433e-9148-b50a5e51eca0",
       "metadata": {
         "colab": {
@@ -1828,7 +1838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 146,
+      "execution_count": null,
       "id": "eb1f2c64-c53e-46f7-9020-9e6f9add7350",
       "metadata": {
         "colab": {
@@ -1869,7 +1879,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": null,
       "id": "d40a8913-29db-479e-b4b6-7f6f380d5ceb",
       "metadata": {
         "colab": {
@@ -1943,7 +1953,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![Treemap Visualization](treemap1.png)\n"
+        "![Treemap Visualization](https://github.com/mwang-cmn/Top_100_Companies_Africa/blob/main/treemap1.png?raw=1)\n"
       ],
       "metadata": {
         "id": "ERLVLhSI_Hkx"
@@ -2024,7 +2034,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 148,
+      "execution_count": null,
       "id": "a0ff690a-ca08-4576-a056-5a2e8e1337a6",
       "metadata": {
         "colab": {
@@ -2326,7 +2336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 149,
+      "execution_count": null,
       "id": "dde3e961-a306-4658-a5a2-a4145dd42cf7",
       "metadata": {
         "colab": {
@@ -2383,7 +2393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 150,
+      "execution_count": null,
       "id": "e0957951-6c0c-47b6-bb1c-7008f0a0b2e9",
       "metadata": {
         "colab": {
@@ -2801,7 +2811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 151,
+      "execution_count": null,
       "id": "8ff37c3e-59da-43ea-b37f-0a6f48787955",
       "metadata": {
         "colab": {
@@ -2875,7 +2885,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![Treemap Visualization](treemap_2.png)\n"
+        "![Treemap Visualization](https://github.com/mwang-cmn/Top_100_Companies_Africa/blob/main/treemap_2.png?raw=1)\n"
       ],
       "metadata": {
         "id": "7pPwQ5s8_ZJ3"
