--- a/Top_100_companies.ipynb
+++ b/Top_100_companies.ipynb
@@ -23,7 +23,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "![Treemap Visualization](https://github.com/mwang-cmn/Top_100_Companies_Africa/blob/main/revenue_africa.png?raw=1)\n"
+        "![](https://github.com/mwang-cmn/Top_100_Companies_Africa/blob/main/africa.png?raw=1)\n"
       ],
       "metadata": {
         "id": "PjNFE70lEuUP"
@@ -54,6 +54,16 @@
         "#### Objectives\n",
         "The objective of this analysis is to examine the distribution of the top 100 companies in Africa by revenue, industry, and country to understand the factors contributing to their dominance.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "UJK_qKjHGM51"
+      },
+      "id": "UJK_qKjHGM51"
     },
     {
       "cell_type": "markdown",
@@ -3023,6 +3033,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
